fix scrollbar layout change

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -7,6 +7,7 @@
 
 html {
     scroll-behavior: smooth;
+    scrollbar-gutter: stable;
 }
 
 body {
